# AutoFileCleaner

./: .gitignore  AutoFileCleaner.pro  CMakeLists.txt  COMPLETION_REPORT.md  DEVELOPER.md  FILELIST.md  INIT_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.bat  run.bat
resources/: app.rc  resources.qrc
src/: addtaskdialog.cpp  addtaskdialog.h  autostartutiility_win.cpp  autostartutiility_win.h  configmanager.cpp  configmanager.h  filecleaner.cpp  filecleaner.h  main.cpp  mainwindow.cpp  mainwindow.h  schedulermanager.cpp  schedulermanager.h  taskmanager.cpp  taskmanager.h  taskmodel.cpp  taskmodel.h
